styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

input,
span,
select,
button {
  font-size: 0.8vw;
}

.toast {
  position: fixed;
  top: 2vh;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--toast-bg-color);
  color: var(--text-color);
  padding: 2vh 5vh;
  border-radius: 1.5vh;
  box-shadow: 0 0.4vh 1.5vh rgba(0, 0, 0, 0.2);
  z-index: 1000;
  opacity: 0;
  font-size: 1vw;
  font-weight: bold;
  transition: background-color 0.3s, color 0.3s, opacity 0.3s ease, top 0.3s ease;
}

.toast.show {
  opacity: 1;
  top: 5vh;
}

.main-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.header {
  background-color: var(--header-bg-color);
  color: var(--header-text-color);
  padding-top: 2vh;
  padding-bottom: 1.5vh;
  border-radius: 1.5vh;
  box-shadow: 0 0.4vh 1.5vh rgba(0, 0, 0, 0.3);
  width: 100%;
  height: 5em;
  text-align: center;
  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
}

body {
  font-family: 'Arial', sans-serif;
  background-color: var(--background-color);
  font-size: 0.8vw;
  color: var(--text-color);
  transition: background-color 0.3s, color 0.3s;
}

.container {
  display: flex;
  flex-direction: row;
  height: 100vh;
  width: 100%;
  gap: 2vh;
  padding: 2vh;
  background-color: var(--background-color);
}

.widget-and-theme {
  flex: 1;
  display: flex;
  min-width: 7%;
  max-width: 17%;
  flex-direction: row;
  background-color: var(--background-color);
}

.theme-toggle-container {
  display: inline-block;
  position: absolute;
  bottom: 2vh;
  left: 2vh;
}

.theme-toggle {
  opacity: 0;
}

.theme-toggle-label {
  width: 4vh;
  height: 4vh;
  background-color: #808080;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: background-color 0.3s;
}

.theme-toggle-label img {
  width: 50%;
  height: 50%;
  object-fit: cover;
}

.simulation-area {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  position: relative;
}

.simulation-area h4 {
  margin-top: 1vh;
}

.widget_info {
  position: absolute;
  top: 25%;
  left: 2vh;
  min-width: 7%;
  max-width: 18%;
  background-color: var(--sidebar-bg-color);
  color: var(--sidebar-text-color);
  border-radius: 1.5vh;
  padding: 1.2%;
  box-shadow: 0 0.4vh 1vh rgba(0, 0, 0, 0.1);
  transition: border-color 0.3s, background-color 0.3s, color 0.3s;
}

.widget_info input {
  background-color: var(--sidebar-bg-color);
  color: var(--sidebar-text-color);
  border: 0;
  transition: border-color 0.3s, background-color 0.3s, color 0.3s;
}

.canvas-container {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  background-color: var(--background-color);
  height: 100%;
}

canvas {
  background-color: var(--canvas-bg-color);
  box-shadow: 0 0.4vh 1.5vh rgba(0, 0, 0, 0.2);
  transition: background-color 0.3s;
}

.sidebar {
  background-color: var(--sidebar-bg-color);
  color: var(--sidebar-text-color);
  padding: 6%;
  border-radius: 1.5vh;
  font-size: 1em;
  flex-direction: column;
  width: 30vh;
  overflow-y: auto;
  height: 80vh;
  box-shadow: 0.4vh 0 1vh rgba(0, 0, 0, 0.2);
  transition: background-color 0.3s, color 0.3s;
}

.sidebar h3 {
  margin-bottom: 2vh;
}

.sidebar span,
h4 {
  margin: 0;
}

.parameter-group label {
  display: block;
  margin-bottom: 0.5vh;
}

.parameter-group input,
select {
  margin-bottom: 2vh;
  width: 100%;
  padding: 1vh;
  border: 0.1vh solid var(--input-border-color);
  border-radius: 0.5vh;
  background-color: var(--input-bg-color);
  color: var(--input-text-color);
  transition: border-color 0.3s, background-color 0.3s, color 0.3s;
}

.parameter-group input:focus,
select:focus {
  border-color: var(--input-focus-border-color);
}

.controls {
  display: flex;
  width: 100%;
}

.speed-control {
  display: flex;
  padding: 1.5vh;
  align-items: center;
}

.speed-control label,
span {
  margin-right: 1vh;
}

.input[type="range"] {
  margin-left: 1vh;
}

#scenarios-form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 1.5vh;
  padding: 2vh;
  background-color: var(--sidebar-bg-color);
  color: var(--sidebar-text-color);
  border-radius: 1.5vh;
  box-shadow: 0 0.4vh 1.5vh rgba(0, 0, 0, 0.2);
  width: 100%;
  margin: 2vh auto;
}

#scenarios-form label {
  display: flex;
  align-items: center;
  gap: 1vh;
  cursor: pointer;
  font-size: 1.2vh;
  color: var(--text-color);
  transition: color 0.3s;
}

#scenarios-form input[type="radio"] {
  opacity: 0;
  position: absolute;
}

#scenarios-form input[type="radio"]+span {
  display: inline-block;
  width: 2.5vh;
  height: 2.5vh;
  border: 0.2vh solid var(--input-border-color);
  border-radius: 50%;
  background-color: var(--input-bg-color);
  position: relative;
  transition: background-color 0.3s, border-color 0.3s;
}

#scenarios-form input[type="radio"]:checked+span {
  background-color: var(--start-btn-bg-color);
  border-color: var(--start-btn-hover-bg-color);
}

#scenarios-form input[type="radio"]:checked+span::after {
  content: '';
  display: block;
  width: 1.3vh;
  height: 1.3vh;
  background-color: var(--start-btn-text-color);
  border-radius: 50%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#scenarios-form label:hover span {
  border-color: var(--start-btn-hover-bg-color);
}

#scenarios-form label:hover {
  color: var(--start-btn-hover-text-color);
}


.buttons {
  position: relative;
  top: 1vh;
}

.start-btn,
.reset-btn,
.copy-btn {
  padding: 0.75vh 0.75vh;
  border-radius: 0.5vh;
  border: 0;
  margin-top: 0.75vh;
  margin-bottom: 1.5vh;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s, transform 0.1s;
}

.start-btn:active,
.reset-btn:active,
.copy-btn:active {
  transform: scale(0.9);
}

.start-btn {
  background-color: var(--start-btn-bg-color);
  color: var(--start-btn-text-color);
}

.start-btn:hover {
  background-color: var(--start-btn-hover-bg-color);
  color: var(--start-btn-hover-text-color);
}

.reset-btn {
  background-color: var(--reset-btn-bg-color);
  color: var(--reset-btn-text-color);
}

.reset-btn:hover {
  background-color: var(--reset-btn-hover-bg-color);
  color: var(--reset-btn-hover-text-color);
}

.copy-btn {
  background-color: var(--reset-btn-bg-color);
  color: var(--reset-btn-text-color);
}

.copy-btn:hover {
  background-color: var(--reset-btn-hover-bg-color);
  color: var(--reset-btn-hover-text-color);
}

.light-mode {
  --widget-bg-color: #ccc;
  --background-color: #dcf3ed;
  --text-color: #000;
  --sidebar-bg-color: #f1f1f1;
  --sidebar-text-color: #333;
  --header-bg-color: #ffffff;
  --header-text-color: #2d2d2d;
  --canvas-bg-color: #ccc;
  --input-bg-color: #ffffff;
  --input-text-color: #333;
  --input-border-color: #ccc;
  --input-focus-border-color: #000000;
  --start-btn-bg-color: #5ad15e;
  --start-btn-text-color: #000;
  --start-btn-hover-bg-color: #45af4a;
  --start-btn-hover-text-color: #000;
  --reset-btn-bg-color: #bbbbbb;
  --reset-btn-text-color: #000;
  --reset-btn-hover-bg-color: #acacac;
  --reset-btn-hover-text-color: #000;
  --toast-bg-color: #6ea5e9;
}

.dark-mode {
  --widget-bg-color: #ccc;
  --background-color: #2c2a3a;
  --text-color: #fff;
  --sidebar-bg-color: #2d2d2d;
  --sidebar-text-color: #e0e0e0;
  --header-bg-color: #333333;
  --header-text-color: #f9f9f9;
  --canvas-bg-color: #ccc;
  --input-bg-color: #333333;
  --input-text-color: #f9f9f9;
  --input-border-color: #666;
  --input-focus-border-color: #ffffff;
  --start-btn-bg-color: #498b4d;
  --start-btn-text-color: #ffffff;
  --start-btn-hover-bg-color: #317735;
  --start-btn-hover-text-color: #ffffff;
  --reset-btn-bg-color: #444444;
  --reset-btn-text-color: #f9f9f9;
  --reset-btn-hover-bg-color: #333333;
  --reset-btn-hover-text-color: #ffffff;
  --toast-bg-color: #1c2e44;
}

